--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eso-ui-integration",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "An integration for Vortex to use ESOUI",
   "main": "./dist/index.js",
   "repository": "",
@@ -32,6 +32,7 @@
     "prettier": "^2.8.1",
     "react": "^16.8.6",
     "react-bootstrap": "^0.32.4",
+    "react-redux": "^8.0.5",
     "redux-act": "^1.8.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.9.6",
