Make the regex for dependencies a matchAll and disabled old versions of an addon when updating even if autoEnable is on

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,15 @@
     "outDir": "./out",
     "jsx": "react",
     "sourceMap": false,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "lib": ["ES2021", "dom"],
+    "skipLibCheck": true
   },
   "exclude": [
-      "node_modules"
-    ],
-  "files": [
-    "src/index.ts",
-    "src/getSafe.ts"
-  ]
+    "node_modules",
+    "./node_modules",
+    "./node_modules/*",
+    "./node_modules/@types/node/index.d.ts"
+  ],
+  "include": ["src/**/*.ts"]
 }
