Updating npm dependencies

--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "@types/redux-thunk": "^2.1.0",
     "7z-bin": "Nexus-Mods/7z-bin",
     "bbcode-to-react": "^0.2.9",
-    "bluebird": "^3.5.5",
+    "bluebird": "^3.7.2",
     "copyfiles": "^2.4.1",
-    "electron": "4.2.4",
+    "electron": "^22.0.0",
     "i18next": "^17.0.4",
     "prettier": "^2.8.1",
     "react": "^16.8.6",
